fixed wrong spacing between more than two checkboxes

--- a/scss/modules/form.scss
+++ b/scss/modules/form.scss
@@ -68,9 +68,6 @@ input {
 // Form behaviours
 // -------------------------
 
-// attention! it is always assumed, that form group consists of 2 elements.
-// the first is the label, the second is the form element itself
-
 .form-group,
 .form-group-vertical,
 .form-vertical .form-group {
@@ -79,11 +76,6 @@ input {
     > :first-child {
         height: 20px;
         margin-bottom: 10px;
-    }
-
-    > :nth-child(2) {
-        margin: 0;
-        vertical-align: middle;
     }
 }
 
